# RudeBench

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.do/: app.yaml
config/: default.yaml  judge.yaml  models.yaml
data/: prompts.jsonl
docs/: PRD.md  RudeBench_Paper_Draft.docx  RudeBench_Paper_Draft.md  RudeBench_Research_Briefing.md  TDD.md
docs/research/: api_pricing.md  benchmark_harnesses.md  llm_judge.md  repo_structure.md
results/completions/: claude-sonnet-4.6.jsonl  gemini-2.5-flash.jsonl  gpt-5-mini.jsonl  grok-3-mini.jsonl  llama-4-scout.jsonl
results/judgments/gpt-4.1/: claude-sonnet-4.6.jsonl  claude-sonnet-4.6_vrb.jsonl  gemini-2.5-flash.jsonl  gemini-2.5-flash_vrb.jsonl  gpt-5-mini.jsonl  gpt-5-mini_vrb.jsonl  grok-3-mini.jsonl  grok-3-mini_vrb.jsonl  llama-4-scout.jsonl  llama-4-scout_vrb.jsonl
rudebench/: __main__.py  config.py  gen_completions.py  gen_judgments.py  show_results.py  utils.py
scripts/: build_prompts.py  extract_renders.py  generate_review.py  quick_analysis.py  validate_prompts.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/data/: dimensions.json  leaderboard.json  meta.json  renders-index.json  tasks.json
site/public/renders/: coding_api_docs_abusive_claude.html  coding_api_docs_abusive_gemini.html  coding_api_docs_abusive_gpt5mini.html  coding_api_docs_abusive_grok.html  coding_api_docs_abusive_llama.html  coding_api_docs_curt_claude.html  (+439 more)
site/scripts/: build-data.py
tests/: test_config.py  test_prompts.py  test_scoring.py
(+280 files in other folders)
